# paper-video

./: .env.example  .gitignore  README.md  app.py  keys.json  pyproject.toml
examples/: crispr_cas9.py  dna_replication.py  mrna_vaccine.py  transcription.py  translation.py
pipeline/: __init__.py  config.py  orchestrator.py  pipeline.py  render_remotion.py  stage1_extract.py  stage2_planner.py  stage3_codegen.py  stage4_render.py  stage5_tts.py  stage6_assembly.py
platform/: package-lock.json  package.json
platform/src/app/: App.tsx
platform/src/app/components/: JobBanner.tsx
platform/src/app/lib/: api.ts  useVideoPlayer.ts
platform/src/app/pages/: Home.tsx  Library.tsx  Processing.tsx  Viewer.tsx
prompts/: codegen_system.txt  planner_system.txt
src/manim_banim/: __init__.py  amino_acids.py  base_pairs.py  cell.py  colors.py  dna.py  labels.py  nucleotides.py  peptides.py  processes.py  proteins.py  rna.py
tests/: test_primitives.py
